--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,18 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
+  
 }
+
+/* .backdrop div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0;
+  max-width: 60%;
+  max-height: 80%;
+ 
+} */
 
 .backdrop img {
   display: block;
